# CMake

./: README.md
1/: CMakeCache.txt  Makefile  ReadMe.txt  cmake_install.cmake  main.cpp  multiplication
2/: CMakeLists.txt  ReadMe.txt
2/inc/: mathx.hpp
2/src/: mathx.cpp
3/: CMakeLists.txt  ReadMe.txt
3/src/: main.cpp
4/: CMakeLists.txt  ReadMe.txt
4/src/: main.cpp
5/: ReadMe.txt
5/code/: CMakeLists.txt
5/src/code/: CMakeLists.txt
6/: ReadMe.txt
Exercise01/: CMakeLists.txt  main.cpp
Exercise02/: CMakeLists.txt
Exercise03/: CMakeLists.txt
Exercise04/src/: main.cpp
Exercise05/src/: mathx.cpp
Exercise06/: CMakeLists.txt  ReadMe.txt
Exercise07/: CMakeLists.txt  ReadMe.txt
Exercise07/src/: main.cpp
Exercise08/: CMakeLists.txt  ReadMe.txt
Exercise08/src/: main.cpp  mathx.cpp
